deploy: 136aa701f8e93e6358c82da099325a0d134acb0d

--- a/ar/index.html
+++ b/ar/index.html
@@ -553,12 +553,12 @@ window.addEventListener('click',(e)=>{
         <section class="page-1 cover page">
             <div class="area">
                 <div class="content">
-                    <h1>Be<br>Free</h1>
-                    <h2 class="gradient-text">Freedom & Security<br>of Your Communications</h2>
-                    <p>The first network where you own your identity, contacts, and groups.</p>
+                    <h1>كن<br>حراً</h1>
+                    <h2 class="gradient-text">حرية وأمن<br>اتصالاتك</h2>
+                    <p>الشبكة الأولى التي تمتلك فيها هويتك وجهات اتصالك ومجموعاتك.</p>
 
                     <div class="socials">
-                        <a href="/downloads" class="desktop-app-btn hidden" title="Download SimpleX Desktop App">
+                        <a href="/downloads" class="desktop-app-btn hidden" title="نزّل تطبيق سطح مكتب SimpleX">
                             <div class="btn-content">
                                 <div>
                                     <img class="no-border" src="/img/design_3/socials/linux.png">
@@ -570,38 +570,38 @@ window.addEventListener('click',(e)=>{
                         </a>
                         <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg"></a>
                         <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank"><img src="/img/new/google_play.svg"></a>
-                        <a class="f-droid-btn hidden" href="/ar/fdroid" title="SimpleX app via F-Droid"><img src="/img/new/f_droid.svg"></a>
-                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="SimpleX iOS beta-release on TestFlight"></a>
+                        <a class="f-droid-btn hidden" href="/ar/fdroid" title="تطبيق SimpleX من خلال F-Droid"><img src="/img/new/f_droid.svg"></a>
+                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="إصدار SimpleX التجريبي ل iOS على TestFlight"></a>
                         <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex.apk" target="_blank"><img src="/img/design_3/android-dark.png"></a>
                     </div>
                     <div class="security-btns">
-                        <a title="Security Audits" href="https://www.trailofbits.com/about" target="_blank">
+                        <a title="التحقيقات الآمنية" href="https://www.trailofbits.com/about" target="_blank">
                             <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
                         </a>
-                        <a class="box-btn btn-1" title="Security Audit 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
+                        <a class="box-btn btn-1" title="تحقيق آمني 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                             2022
                         </a>
-                        <a class="box-btn btn-2" title="Security Audit 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                        <a class="box-btn btn-2" title="تحقيق آمني 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                             2024
                         </a>
                         <p class="security-audits">
-                            Security<br>Audits
+                            التحقيقات<br>الآمنية
                         </p>
                     </div>
                     <div class="publications-btns">
-                        <a title="Privacy Guides messenger recommendations" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                        <a title="توصيات Privacy Guides للمُراسلة" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
-                        <a title="Whonix messenger recommendations" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
+                        <a title="توصيات Whonix للمُراسلة" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
                             <img src="/img/design_3/publications/whonix.png" alt="Whonix">
                         </a>
-                        <a title="Heise Online publications" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                        <a title="منشورات Heise Online" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
-                        <a title="Review by Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                        <a title="مراجعة بواسطة Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
                             <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog">
                         </a>
-                        <a title="OptOut podcast interview" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                        <a title="مقابلة بودكاست OptOut" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
                             <img src="/img/design_3/publications/optout.png" alt="Opt Out">
                         </a>
                     </div>
@@ -615,10 +615,10 @@ window.addEventListener('click',(e)=>{
             <section id="messaging" class="page-2 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>World&apos;s Most Secure Messaging</h2>
-                        <p>SimpleX messaging has cutting-edge end-to-end encryption.</p>
-                        <p>For your security and privacy, servers can&apos;t see your messages <span>and who you talk to</span>.</p>
-                        <a class="gradient-text" href="/ar/messaging">Learn more about SimpleX messaging</a>
+                        <h2>المُراسلة الأكثر أمانًا في العالم</h2>
+                        <p>تتميز رسائل SimpleX بتعمية متطورة بين الطرفين.</p>
+                        <p>لأمانك وخصوصيتك، لا يمكن للخوادم رؤية رسائلك <span>ومَن تتحدث إليه</span>.</p>
+                        <a class="gradient-text" href="/ar/messaging">تعرّف على المزيد حول مراسلة SimpleX</a>
                     </div>
                 </div>
             </section>
@@ -626,9 +626,9 @@ window.addEventListener('click',(e)=>{
             <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>You Own<br>The Next Web</h2>
-                        <p>SimpleX is founded on the belief that <span>you must own your identity, contacts and communities</span>.</p>
-                        <p>Open and decentralized network lets you connect with people and share ideas: be free and secure.</p>
+                        <h2>أنت تملك<br>الشبكة التالية</h2>
+                        <p>تأسست SimpleX على الاعتقاد بأن <span>عليك امتلاك هويتك وجهات اتصالك ومجتمعاتك</span>.</p>
+                        <p>شبكة مفتوحة ولامركزية تتيح لك التواصل مع الأشخاص ومشاركة الأفكار: كن حرًا وآمنًا.</p>
                     </div>
                 </div>
             </section>
@@ -636,10 +636,10 @@ window.addEventListener('click',(e)=>{
             <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Communities That Last</h2>
-                        <p>You will support your favorite groups with future Community Vouchers.</p>
-                        <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
-                        <a class="gradient-text" href="/token">Learn more and <strong>get your free NFT</strong><br>for 20% discount on SimpleX Token!</a>
+                        <h2>مجتمعات تدوم</h2>
+                        <p>ستدعم مجموعاتك المفضلة بقسائم المجتمع المستقبلية.</p>
+                        <p>ستدفع القسائم ثمن الخوادم، لتمكين مجتمعاتك من البقاء حرة ومستقلة.</p>
+                        <a class="gradient-text" href="/token">Learn more and <strong>get your free NFT</strong><br>for early testing.</a>
                     </div>
                 </div>
             </section>
@@ -647,21 +647,21 @@ window.addEventListener('click',(e)=>{
             <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>SimpleX Roadmap to Free Internet</h2>
+                        <h2>خارطة طريق SimpleX للإنترنت المجاني</h2>
                         <div class="roadmap">
                             <p>2025 </p>
-                            <p class="title"><span>: </span>Scale to Large Communities</p>
-                            <p>Escaping centralized platforms</p>
+                            <p class="title"><span>: </span>التوسع إلى مجتمعات كبيرة</p>
+                            <p>الهروب من المنصات المركزية</p>
                         </div>
                         <div class="roadmap">
                             <p>2026 </p>
-                            <p class="title"><span>: </span>Sustainable Communities &amp; Servers</p>
-                            <p>Launching Community Vouchers</p>
+                            <p class="title"><span>: </span>مجتمعات وخوادم مستدامة</p>
+                            <p>إطلاق قسائم المجتمع</p>
                         </div>
                         <div class="roadmap">
                             <p>2027 </p>
-                            <p class="title"><span>: </span>Make Your Communities Grow</p>
-                            <p>Tools to promote your communities</p>
+                            <p class="title"><span>: </span>اجعل مجتمعاتك تنمو</p>
+                            <p>أدوات لتعزيز مجتمعاتك</p>
                         </div>
                     </div>
                 </div>
@@ -682,7 +682,7 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
-                    <a href="https://smp4.simplex.im/g#hr4lvFeBmndWMKTwqiodPz3VBo_6UmdGWocXd1SupsM" class="simplex-image" title="SimpleX users group" target="_blank">
+                    <a href="https://smp4.simplex.im/g#hr4lvFeBmndWMKTwqiodPz3VBo_6UmdGWocXd1SupsM" class="simplex-image" title="مجموعة مستخدمي SimpleX" target="_blank">
                         <img class="block dark:hidden" src="/img/new/logo-symbol-light.svg">
                         <img class="hidden dark:block" src="/img/new/logo-symbol-dark.svg">
                     </a>
@@ -702,10 +702,10 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                 </div>
                 <div class="text-container">
-                    <h2>Join SimpleX Communities</h2>
-                    <p>Hundreds of thousands people already trust SimpleX messaging.</p>
-                    <p>Find your communities in SimpleX directory and create your own!</p>
-                    <a class="gradient-text" href="/directory">View SimpleX Directory</a>
+                    <h2>انضم إلى مجتمعات SimpleX</h2>
+                    <p>مئات الآلاف من الأشخاص يثقون بالفعل في مُراسلة SimpleX.</p>
+                    <p>ابحث عن مجتمعاتك في دليل SimpleX وأنشئ مجتمعك الخاص!</p>
+                    <a class="gradient-text" href="/directory">اعرض دليل SimpleX</a>
                 </div>
             </div>
         </section>
