--- a/de/index.html
+++ b/de/index.html
@@ -570,7 +570,7 @@ window.addEventListener('click',(e)=>{
                         </a>
                         <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg"></a>
                         <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank"><img src="/img/new/google_play.svg"></a>
-                        <a class="f-droid-btn hidden" href="/de/fdroid" title="SimpleX F-Droid-Repository"><img src="/img/new/f_droid.svg"></a>
+                        <a class="f-droid-btn hidden" href="/de/fdroid" title="SimpleX-App über das F-Droid-Repository"><img src="/img/new/f_droid.svg"></a>
                         <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="Öffentlicher iOS-Preview auf TestFlight"></a>
                         <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex.apk" target="_blank"><img src="/img/design_3/android-dark.png"></a>
                     </div>
@@ -589,19 +589,19 @@ window.addEventListener('click',(e)=>{
                         </p>
                     </div>
                     <div class="publications-btns">
-                        <a title="Empfehlungen für Messenger" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                        <a title="Messenger-Empfehlungen von Privacy Guides" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
                         <a title="Whonix - Empfehlungen für Messenger" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
                             <img src="/img/design_3/publications/whonix.png" alt="Whonix">
                         </a>
-                        <a title="Veröffentlichung" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                        <a title="Veröffentlichungen von Heise Online" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
-                        <a title="Überprüfung" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                        <a title="Überprüfung von Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
                             <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog">
                         </a>
-                        <a title="Podcast-Interview" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                        <a title="Podcast-Interview von OptOut" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
                             <img src="/img/design_3/publications/optout.png" alt="Opt Out">
                         </a>
                     </div>
@@ -617,7 +617,7 @@ window.addEventListener('click',(e)=>{
                     <div class="text-container">
                         <h2>Das sicherste Messaging-System der Welt</h2>
                         <p>SimpleX-Messaging verfügt über modernste Ende-zu-Ende-Verschlüsselung.</p>
-                        <p>Zu Ihrer Sicherheit und zum Schutz Ihrer Privatsphäre können Server Ihre Nachrichten weder sehen,<span> noch mit wem Sie kommunizieren.</span></p>
+                        <p>Zu Ihrer Sicherheit und zum Schutz Ihrer Privatsphäre können Server Ihre Nachrichten weder sehen,<span> noch mit wem Sie kommunizieren</span>.</p>
                         <a class="gradient-text" href="/de/messaging">Lernen Sie mehr über SimpleX-Messaging</a>
                     </div>
                 </div>
@@ -627,7 +627,7 @@ window.addEventListener('click',(e)=>{
                 <div class="area">
                     <div class="text-container">
                         <h2>Sie besitzen<br>The Next Web</h2>
-                        <p>SimpleX basiert auf der Überzeugung, dass <span>Sie Eigentümer Ihrer Identität, Ihrer Kontakte und Ihrer Communities sein müssen.</span></p>
+                        <p>SimpleX basiert auf der Überzeugung, dass <span>Sie Eigentümer Ihrer Identität, Ihrer Kontakte und Ihrer Communities sein müssen</span>.</p>
                         <p>Ein offenes und dezentrales Netzwerk ermöglicht es Ihnen, mit Menschen in Kontakt zu treten und Ideen auszutauschen: Seien Sie frei und sicher.</p>
                     </div>
                 </div>
