--- a/es/index.html
+++ b/es/index.html
@@ -553,9 +553,9 @@ window.addEventListener('click',(e)=>{
         <section class="page-1 cover page">
             <div class="area">
                 <div class="content">
-                    <h1>Sea<br>Libre</h1>
+                    <h1>Sé<br>Libre</h1>
                     <h2 class="gradient-text">Libertad y Seguridad<br>en Tus Comunicaciones</h2>
-                    <p>La primera red donde su identidad, contactos y grupos le pertenecen.</p>
+                    <p>La primera red donde tu identidad, contactos y grupos te pertenecen.</p>
 
                     <div class="socials">
                         <a href="/downloads" class="desktop-app-btn hidden" title="Descargar SimpleX Desktop App">
@@ -570,38 +570,38 @@ window.addEventListener('click',(e)=>{
                         </a>
                         <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg"></a>
                         <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank"><img src="/img/new/google_play.svg"></a>
-                        <a class="f-droid-btn hidden" href="/es/fdroid" title="Repositorio SimpleX F-Droid"><img src="/img/new/f_droid.svg"></a>
-                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="Vista previa pública de iOS en TestFlight"></a>
+                        <a class="f-droid-btn hidden" href="/es/fdroid" title="SimpleX app vía F-Droid"><img src="/img/new/f_droid.svg"></a>
+                        <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="Betas SimpleX para iOS en TestFlight"></a>
                         <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex.apk" target="_blank"><img src="/img/design_3/android-dark.png"></a>
                     </div>
                     <div class="security-btns">
-                        <a title="Evaluación de seguridad" href="https://www.trailofbits.com/about" target="_blank">
+                        <a title="Auditorías de seguridad" href="https://www.trailofbits.com/about" target="_blank">
                             <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
                         </a>
-                        <a class="box-btn btn-1" title="Revisión de Seguridad 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
+                        <a class="box-btn btn-1" title="Auditoría de Seguridad 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                             2022
                         </a>
-                        <a class="box-btn btn-2" title="Revisión de Seguridad 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                        <a class="box-btn btn-2" title="Auditoría de Seguridad 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                             2024
                         </a>
                         <p class="security-audits">
-                            Auditorías de<br>Seguridad
+                            Auditorías en<br>Seguridad
                         </p>
                     </div>
                     <div class="publications-btns">
-                        <a title="Recomendaciones de mensajería" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                        <a title="Recomendaciones de mensajería de Privacy Guides" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
                         <a title="Recomendación de mensajería de Whonix" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
                             <img src="/img/design_3/publications/whonix.png" alt="Whonix">
                         </a>
-                        <a title="Publicación" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                        <a title="Publicaciones Heise Online" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
-                        <a title="Revisión" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                        <a title="Revisión por Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
                             <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog">
                         </a>
-                        <a title="Entrevista en podcast" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                        <a title="Entrevista en podcast de OptOut" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
                             <img src="/img/design_3/publications/optout.png" alt="Opt Out">
                         </a>
                     </div>
@@ -615,10 +615,10 @@ window.addEventListener('click',(e)=>{
             <section id="messaging" class="page-2 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>La Mensajería Más Segura del Mundo</h2>
+                        <h2>Mensajería Más Segura Del Mundo</h2>
                         <p>Le mensajería SimpleX dispone de cifrado de extremo a extremo de vanguardia.</p>
-                        <p>Por su seguridad y privacidad los servidores no pueden ver sus mensajes <span>ni con quién habla.</span></p>
-                        <a class="gradient-text" href="/es/messaging">Sepa más sobre la mensajería SimpleX</a>
+                        <p>Para tu seguridad y privacidad los servidores no pueden ver tus mensajes <span>ni con quién te comunicas</span>.</p>
+                        <a class="gradient-text" href="/es/messaging">Descubre más sobre la mensajería SimpleX</a>
                     </div>
                 </div>
             </section>
@@ -626,9 +626,9 @@ window.addEventListener('click',(e)=>{
             <section id="nextweb" class="page-3 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Usted Posee<br>La Web Futura</h2>
-                        <p>SimpleX se funda en la creencia de que <span>usted debe ser propietario de su identidad, contactos y comunidades.</span></p>
-                        <p>Una red abierta y descentralizada que le permite conectarse con personas y compartir ideas: libre y segura.</p>
+                        <h2>Tu Posees<br>La Próxima Web</h2>
+                        <p>SimpleX se funda en la creencia de que <span>debes ser el propietario de tu identidad, contactos y comunidades</span>.</p>
+                        <p>Una red abierta y descentralizada que te permite conectarte con personas y compartir ideas: libre y segura.</p>
                     </div>
                 </div>
             </section>
@@ -636,10 +636,10 @@ window.addEventListener('click',(e)=>{
             <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Comunidades Que Perduran</h2>
-                        <p>Usted apoyará a sus grupos favoritos con futuros Vales Comunitarios.</p>
-                        <p>Los vales pagarán los servidores para que sus comunidades sigan siendo libres e independientes.</p>
-                        <a class="gradient-text" href="/token">Conoce más y <strong>obten tu NFT gratuito</strong><br>para un 20% de descuento en SimpleX Token!</a>
+                        <h2>Comunidades Duraderas</h2>
+                        <p>Podrás apoyar a tus grupos favoritos con los futuros Vales Comunitarios.</p>
+                        <p>Los vales costearán los servidores para que tus comunidades sigan siendo libres e independientes.</p>
+                        <a class="gradient-text" href="/token">Descubre más y <strong>obtén tu NFT gratuito</strong><br>con 20% de descuento en SimpleX Token!</a>
                     </div>
                 </div>
             </section>
@@ -647,21 +647,21 @@ window.addEventListener('click',(e)=>{
             <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Hoja de ruta SimpleX hacia el Internet Libre</h2>
+                        <h2>Ruta de SimpleX hacía el Internet Libre</h2>
                         <div class="roadmap">
                             <p>2025 </p>
-                            <p class="title"><span>: </span>Escalar a Grandes Comunidades</p>
+                            <p class="title"><span>: </span>Escalar a Comunidades Grandes</p>
                             <p>Huyendo de plataformas centralizadas</p>
                         </div>
                         <div class="roadmap">
                             <p>2026 </p>
                             <p class="title"><span>: </span>Comunidades y Servidores Sostenibles</p>
-                            <p>Lanzamiento de los Vales Comunitarios</p>
+                            <p>Lanzamiento de Vales Comunitarios</p>
                         </div>
                         <div class="roadmap">
                             <p>2027 </p>
-                            <p class="title"><span>: </span>Haga Crecer Sus Comunidades</p>
-                            <p>Herramientas para promocionar sus comunidades</p>
+                            <p class="title"><span>: </span>Haz Crecer Tus Comunidades</p>
+                            <p>Herramientas para promocionarlas</p>
                         </div>
                     </div>
                 </div>
@@ -702,9 +702,9 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                 </div>
                 <div class="text-container">
-                    <h2>Únase a las Comunidades SimpleX</h2>
-                    <p>Cientos de miles de personas ya confían en la mensajería SimpleX.</p>
-                    <p>¡Encuentre sus comunidades en el directorio SimpleX y cree la suya!</p>
+                    <h2>Únete a las Comunidades SimpleX</h2>
+                    <p>Cientos de miles de personas confían ya en la mensajería SimpleX.</p>
+                    <p>¡Encuentra comunidades en el directorio SimpleX y crea la tuya!</p>
                     <a class="gradient-text" href="/directory">Ver el Directorio SimpleX</a>
                 </div>
             </div>
@@ -721,7 +721,7 @@ window.addEventListener('click',(e)=>{
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            Acerca de & Contacta con nosotros
+                            Quiénes somos & Contacto
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
