--- a/it/index.html
+++ b/it/index.html
@@ -553,7 +553,7 @@ window.addEventListener('click',(e)=>{
         <section class="page-1 cover page">
             <div class="area">
                 <div class="content">
-                    <h1>Sii<br>libero</h1>
+                    <h1>Vivi<br>libero</h1>
                     <h2 class="gradient-text">Libertà e sicurezza<br>delle tue comunicazioni</h2>
                     <p>La prima rete in cui possiedi la tua identità, i contatti e i gruppi.</p>
 
@@ -570,18 +570,18 @@ window.addEventListener('click',(e)=>{
                         </a>
                         <a class="apple-store-btn hidden" href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img src="/img/new/apple_store.svg"></a>
                         <a class="google-play-btn hidden" href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank"><img src="/img/new/google_play.svg"></a>
-                        <a class="f-droid-btn hidden" href="/it/fdroid" title="Repository F-Droid di SimpleX"><img src="/img/new/f_droid.svg"></a>
+                        <a class="f-droid-btn hidden" href="/it/fdroid" title="SimpleX via F-Droid"><img src="/img/new/f_droid.svg"></a>
                         <a class="testflight-btn hidden" href="https://testflight.apple.com/join/DWuT2LQu" target="_blank"><img class="no-border" src="/img/design_3/testflight-dark.png" title="Anteprima pubblica per iOS su TestFlight"></a>
                         <a class="android-btn hidden" href="https://github.com/simplex-chat/simplex-chat/releases/latest/download/simplex.apk" target="_blank"><img src="/img/design_3/android-dark.png"></a>
                     </div>
                     <div class="security-btns">
-                        <a title="valutazione della sicurezza" href="https://www.trailofbits.com/about" target="_blank">
+                        <a title="Analisi della sicurezza" href="https://www.trailofbits.com/about" target="_blank">
                             <img src="/img/design_3/publications/trail-of-bits.png" alt="Trail of Bits">
                         </a>
-                        <a class="box-btn btn-1" title="Revisione della sicurezza 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
+                        <a class="box-btn btn-1" title="Analisi della sicurezza 2022" href="/blog/20221108-simplex-chat-v4.2-security-audit-new-website.html">
                             2022
                         </a>
-                        <a class="box-btn btn-2" title="Revisione della sicurezza 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
+                        <a class="box-btn btn-2" title="Analisi della sicurezza 2024" href="/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html">
                             2024
                         </a>
                         <p class="security-audits">
@@ -589,19 +589,19 @@ window.addEventListener('click',(e)=>{
                         </p>
                     </div>
                     <div class="publications-btns">
-                        <a title="consigli sulla messaggistica" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
+                        <a title="Consigli sulla messaggistica di Privacy Guides" href="https://www.privacyguides.org/en/real-time-communication/#simplex-chat" target="_blank">
                             <img src="/img/design_3/publications/privacy-guides.png" alt="Privacy Guides">
                         </a>
                         <a title="consigli sulla messaggistica di Whonix" href="https://www.whonix.org/wiki/Chat#Recommendation" target="_blank">
                             <img src="/img/design_3/publications/whonix.png" alt="Whonix">
                         </a>
-                        <a title="pubblicazione" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
+                        <a title="Pubblicazioni di Heise Online" href="https://www.heise.de/suche/?q=simplex+chat&sort_by=date&rm=search" target="_blank">
                             <img src="/img/design_3/publications/heise.png" alt="Heise">
                         </a>
-                        <a title="revisione" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
+                        <a title="Recensione di Mike Kuketz" href="https://www.kuketz-blog.de/simplex-eindruecke-vom-messenger-ohne-identifier/" target="_blank">
                             <img src="/img/design_3/publications/kuketz-blog.png" alt="Kuketz Blog">
                         </a>
-                        <a title="intervista podcast" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
+                        <a title="Intervista podcast di OptOut" href="https://optoutpod.com/episodes/s3e02-simplexchat/" target="_blank">
                             <img src="/img/design_3/publications/optout.png" alt="Opt Out">
                         </a>
                     </div>
@@ -617,7 +617,7 @@ window.addEventListener('click',(e)=>{
                     <div class="text-container">
                         <h2>La messaggistica più sicuro del mondo</h2>
                         <p>SimpleX usa una crittografia end-to-end all&#39;avanguardia.</p>
-                        <p>Per la tua sicurezza e privacy, i server non possono vedere i messaggi <span>o con chi parli.</span></p>
+                        <p>Per la tua sicurezza e privacy, i server non possono vedere i messaggi <span>e con chi parli</span>.</p>
                         <a class="gradient-text" href="/it/messaging">Scopri di più sui messaggi di SimpleX</a>
                     </div>
                 </div>
@@ -627,7 +627,7 @@ window.addEventListener('click',(e)=>{
                 <div class="area">
                     <div class="text-container">
                         <h2>Il nuovo web<br>è tuo</h2>
-                        <p>SimpleX è fondato sulla convinzione che <span>devi possedere la tua identità, i tuoi contatti e le tue comunità.</span></p>
+                        <p>SimpleX è fondato sulla convinzione che <span>devi possedere la tua identità, i tuoi contatti e le tue comunità</span>.</p>
                         <p>La rete aperta e decentralizzata consente di connetterti con persone e condividere idee: sii libero e al sicuro.</p>
                     </div>
                 </div>
@@ -636,7 +636,7 @@ window.addEventListener('click',(e)=>{
             <section id="token" class="page-4 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Comunità che durano</h2>
+                        <h2>Comunità fatte per restare</h2>
                         <p>Sosterrai i tuoi gruppi preferiti con futuri buoni comunitari.</p>
                         <p>I buoni pagheranno i server, per consentire alle tue comunità di rimanere libere e indipendenti.</p>
                         <a class="gradient-text" href="/token">Scopri di più e <strong>ricevi un NFT gratuito</strong><br>per uno sconto del 20% su SimpleX Token!</a>
@@ -647,7 +647,7 @@ window.addEventListener('click',(e)=>{
             <section id="roadmap" class="page-5 page">
                 <div class="area">
                     <div class="text-container">
-                        <h2>Tabella di marcia di SimpleX per un internet libero</h2>
+                        <h2>Tabella di marcia per un internet libero</h2>
                         <div class="roadmap">
                             <p>2025 </p>
                             <p class="title"><span>: </span>Scalabilità per comunità numerose</p>
@@ -702,7 +702,7 @@ window.addEventListener('click',(e)=>{
                     <a href="/directory" class="group-image" target="_blank"><img src="/img/group.svg"></a>
                 </div>
                 <div class="text-container">
-                    <h2>Entra nelle comunità di SimpleX</h2>
+                    <h2>Unisciti alle comunità di SimpleX</h2>
                     <p>Centinaia di migliaia di persone si fidano già di SimpleX.</p>
                     <p>Trova le comunità nella directory di SimpleX e creane una tua!</p>
                     <a class="gradient-text" href="/directory">Vedi la directory di SimpleX</a>
