--- a/ru/index.html
+++ b/ru/index.html
@@ -639,7 +639,7 @@ window.addEventListener('click',(e)=>{
                         <h2>Стабильные Сообщества</h2>
                         <p>Вы сможете поддерживать Ваши любимые группы с помощью будущих Ваучеров Групп.</p>
                         <p>Ваучеры будут использоваться для оплаты за серверы, чтобы группы оставались свободными и независимыми.</p>
-                        <a class="gradient-text" href="/token">Узнайте больше и <strong> возьмите Ваш бесплатный NFT</strong>, чтобы получить скидку 20% на SimpleX токены!</a>
+                        <a class="gradient-text" href="/token">Узнайте больше и <strong> возьмите бесплатный NFT</strong>, чтобы участвовать в тестировании.</a>
                     </div>
                 </div>
             </section>
