--- a/es/fdroid/index.html
+++ b/es/fdroid/index.html
@@ -651,12 +651,12 @@ window.addEventListener('click',(e)=>{
                 <div class="flex flex-col-reverse sm:flex-row gap-4">
                     <div>
                         <p class="mb-2 text-lg font-medium mt-6">Versiones estables y beta compilados por los desarrolladores</p>
-                        <p>Para añadirlo a tu cliente F-Droid <span class="hide-on-mobile">escanea el código QR</span> usa esta URL:</p>
+                        <p>Para añadirlo al cliente F-Droid, <span class="hide-on-mobile">escanea el código QR o</span> usa esta URL:</p>
                         <a class="mb-2 break-words text-primary-light dark:text-primary-dark block text-left rtl:text-right text-[14px] xl:text-[16px] leading-[34px] underline-offset-2" href="https://app.simplex.chat/fdroid/repo?fingerprint=9F358FF284D1F71656A2BFAF0E005DEAE6AA14143720E089F11FF2DDCFEB01BA">
                             <code>https://app.simplex.chat/fdroid/repo</code>
                         </a>
                         <p>
-                            Huella digital de la clave de firma (SHA-256):
+                            Huella de la clave (SHA-256):
                             </p><blockquote class="font-bold mt-2">
                                 9F 35 8F F2 84 D1 F7 16 56 A2 BF AF 0E 00 5D EA E6 AA 14 14 37 20 E0 89 F1 1F F2 DD CF EB 01 BA
                             </blockquote>
@@ -673,8 +673,8 @@ window.addEventListener('click',(e)=>{
                 <h3 class="text-grey-black dark:text-white text-[24px] lg:text-[32px] font-bold mb-6">Repositorio F-Droid.org</h3>
                 <a class="inline-block" href="https://f-droid.org/en/packages/chat.simplex.app/" target="_blank" title="SimpleX F-Droid Repository"><img class="h-[40px] w-auto" src="/img/new/f_droid.svg"></a>
                 <p class="mb-2 text-lg font-medium mt-6">Versión estable compilada por F-Droid.org</p>
-                <p class="mb-2">Las versiones aparecen varios días más tarde en este repositorio.</p>
-                <p class="mb-2">Los repositorios de SimpleX Chat y F-Droid.org firman con distinto certificado. Para cambiar, por favor <a href="/docs/guide/chat-profiles.html#move-your-chat-profiles-to-another-device">exportar</a> la base de datos y reinstala la aplicación.</p>
+                <p class="mb-2">Las versiones se publican varios días más tarde en este repositorio.</p>
+                <p class="mb-2">Los repositorios de SimpleX Chat y F-Droid.org firman con claves distintas. Para pasar de uno a otro, por favor <a href="/docs/guide/chat-profiles.html#move-your-chat-profiles-to-another-device">exporta</a> la base de datos y reinstala la aplicación.</p>
             </div>
         </div>
 
@@ -703,7 +703,7 @@ window.addEventListener('click',(e)=>{
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            Acerca de & Contacta con nosotros
+                            Quiénes somos & Contacto
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
