--- a/es/invitation/index.html
+++ b/es/invitation/index.html
@@ -640,7 +640,7 @@ window.addEventListener('click',(e)=>{
             <h1 class="text-[38px] leading-[43px] font-bold max-w-[500px] mb-[30px] primary-header-contact">Has recibido un enlace de un solo uso para conectarte con SimpleX Chat</h1>
             <h2 class="text-[20px] leading-[28px] text-[#606C71] dark:text-white font-bold max-w-[475px] mb-[80px] secondary-header-contact">Escanéa el código QR en tu teléfono o tableta con la aplicación SimpleX Chat.</h2>
             <p class="text-grey-black dark:text-white text-base mb-[16px]">
-                Las claves públicas y la dirección de la cola de mensajes de este enlace NO se envían a través de la red cuando ves esta página — están contenidos en el fragmento hash del URL del enlace.
+                Las claves públicas y la dirección de la cola de mensajes de este enlace NO se envían a través de la red cuando ves esta página. Están contenidos en el fragmento hash del URL del enlace.
             </p>
             <p class="text-grey-black dark:text-white text-base">¿Aún no has descargado SimpleX Chat?</p>
             <p class="text-grey-black dark:text-white text-base mb-[24px]">Usa los siguientes enlaces para descargar la aplicación.</p>
@@ -696,7 +696,7 @@ window.addEventListener('click',(e)=>{
             <div class="flex flex-col justify-center items-center w-full max-w-[468px] h-[131px] rounded-[30px] border-[1px] border-[#A8B0B4] dark:border-white border-opacity-60 mb-6 relative">
                 <p class="text-xl font-medium text-grey-black dark:text-white mb-4 d-none-if-js-disabled">Conectar en la aplicación</p>
                 <noscript>
-                    <p class="text-xl font-medium text-grey-black dark:text-white mb-4">Usa el enlace en la apliación móvil</p>
+                    <p class="text-xl font-medium text-grey-black dark:text-white mb-4">Por favor, usa el enlace en la apliación móvil</p>
                 </noscript>
 
                 <a id="mobile_conn_req_uri" class="bg-[#0053D0] text-white py-3 px-8 rounded-[34px] h-[44px] text-[16px] leading-[19px] tracking-[0.02em]">Abrir la aplicación Simplex</a>
@@ -707,7 +707,7 @@ window.addEventListener('click',(e)=>{
             </div>
 
             <div class="flex flex-col justify-center items-center w-full max-w-[468px] h-[131px] rounded-[30px] border-[1px] border-[#A8B0B4] dark:border-white border-opacity-60 relative d-none-if-js-disabled">
-                <p class="text-xl font-medium text-grey-black dark:text-white max-w-[230px] text-center">Pulse el botón <span class="text-active-blue">‘conectar’</span> en la aplicación</p>
+                <p class="text-xl font-medium text-grey-black dark:text-white max-w-[230px] text-center">Pulsa el botón <span class="text-active-blue">"conectar"</span> en la aplicación</p>
 
                 <div class="absolute bg-[#0197FF] h-[44px] w-[44px] rounded-full flex items-center justify-center top-0 left-0 translate-x-[-30%] translate-y-[-30%]">
                     <p class="text-base text-white font-bold leading-[36px]">3</p>
@@ -735,7 +735,7 @@ window.addEventListener('click',(e)=>{
     
                     <div class="contact-tab-content flex flex-col gap-10">
                         <p class="text-base mb-5">
-                            Las claves públicas y la dirección de la cola de mensajes de este enlace NO se envían a través de la red cuando ves esta página —<br> están contenidas en el fragmento hash del URL del enlace.
+                            Las claves públicas y la dirección de la cola de mensajes de este enlace NO se envían a través de la red cuando ves esta página.<br> Están contenidos en el fragmento hash del URL del enlace.
                         </p>
                         <canvas class="self-center conn_req_uri_qrcode"></canvas>
                     </div>
@@ -805,19 +805,19 @@ window.addEventListener('click',(e)=>{
 
 <section id="join-simplex" class="bg-primary-bg-light dark:bg-primary-bg-dark lg:h-[855px] py-[90px] px-5">
     <div class="container flex flex-col items-center">
-        <h2 class="text-[38px] leading-[36px] md:leading-[55px] text-grey-black dark:text-white text-center font-bold mb-5"><span class="text-active-blue">Únase a</span> SimpleX</h2>
-        <p class="text-black dark:text-white text-base text-center mb-14">Le invitamos a unirse a la conversación</p>
+        <h2 class="text-[38px] leading-[36px] md:leading-[55px] text-grey-black dark:text-white text-center font-bold mb-5"><span class="text-active-blue">Únete a</span> SimpleX</h2>
+        <p class="text-black dark:text-white text-base text-center mb-14">Te invitamos a unirte a la conversación</p>
 
         <div class="flex flex-col items-center gap-5 self-stretch mb-12">
-            <a href="https://www.reddit.com/r/SimpleXChat/" class="flex items-center justify-center h-11 w-full max-w-[294px] font-medium text-base rounded-[34px] tracking-[0.02em] text-primary-light dark:text-primary-dark dark:bg-primary-bg-dark dark:border-primary-dark dark:border bg-[#D9ECFF]">Únase a la comunidad REDDIT</a>
-            <a href="https://github.com/simplex-chat" class="flex items-center justify-center h-11 w-full max-w-[294px] font-medium text-base rounded-[34px] tracking-[0.02em] text-primary-light dark:text-primary-dark dark:bg-primary-bg-dark dark:border-primary-dark dark:border bg-[#D9ECFF]">Únase a nosotros en GitHub</a>
-            <a href="https://github.com/simplex-chat/simplex-chat#please-support-us-with-your-donations" class="flex items-center justify-center h-11 w-full max-w-[294px] font-medium text-base rounded-[34px] tracking-[0.02em] text-primary-light dark:text-primary-dark dark:border-none bg-white dark:bg-[rgba(112,240,249,0.2)] border border-[#0053D0]">Para ayudarnos haga una donación aquí</a>
+            <a href="https://www.reddit.com/r/SimpleXChat/" class="flex items-center justify-center h-11 w-full max-w-[294px] font-medium text-base rounded-[34px] tracking-[0.02em] text-primary-light dark:text-primary-dark dark:bg-primary-bg-dark dark:border-primary-dark dark:border bg-[#D9ECFF]">Únete a la comunidad REDDIT</a>
+            <a href="https://github.com/simplex-chat" class="flex items-center justify-center h-11 w-full max-w-[294px] font-medium text-base rounded-[34px] tracking-[0.02em] text-primary-light dark:text-primary-dark dark:bg-primary-bg-dark dark:border-primary-dark dark:border bg-[#D9ECFF]">Únete a nosotros en GitHub</a>
+            <a href="https://github.com/simplex-chat/simplex-chat#please-support-us-with-your-donations" class="flex items-center justify-center h-11 w-full max-w-[294px] font-medium text-base rounded-[34px] tracking-[0.02em] text-primary-light dark:text-primary-dark dark:border-none bg-white dark:bg-[rgba(112,240,249,0.2)] border border-[#0053D0]">Dona aquí para ayudarnos</a>
         </div>
 
-        <p class="text-grey-black dark:text-white text-base text-center mb-7">Suscríbase para recibir nuestras actualizaciones</p>
+        <p class="text-grey-black dark:text-white text-base text-center mb-7">Suscríbete para recibir actualizaciones</p>
 
         <form class="flex items-center w-full max-w-[540px] mb-20" action="https://chat.us2.list-manage.com/subscribe/post?u=ddd892b258ae36e5438e6d4e1&amp;id=ad6037a2fe" method="post" target="_blank" novalidate="">
-            <input name="EMAIL" type="text" class="h-[44px] ltr:rounded-l-[34px] rtl:rounded-r-[34px] bg-transparent border border-primary-light focus:outline-none text-primary-light dark:text-primary-dark text-base w-full max-w-[400px] px-5 placeholder:text-grey-black placeholder:dark:text-white placeholder:text-base placeholder:font-normal placeholder:tracking-[0.01em]" placeholder="Escriba su dirección de correo electrónico">
+            <input name="EMAIL" type="text" class="h-[44px] ltr:rounded-l-[34px] rtl:rounded-r-[34px] bg-transparent border border-primary-light focus:outline-none text-primary-light dark:text-primary-dark text-base w-full max-w-[400px] px-5 placeholder:text-grey-black placeholder:dark:text-white placeholder:text-base placeholder:font-normal placeholder:tracking-[0.01em]" placeholder="Escribe tu correo electrónico">
             <span aria-hidden="true" class="hidden">
                 <input type="text" name="b_ddd892b258ae36e5438e6d4e1_ad6037a2fe" tabindex="-1" value="">
             </span>
@@ -826,7 +826,7 @@ window.addEventListener('click',(e)=>{
 
         <hr class="block mb-7 mx-5 dark:opacity-[0.2] w-full">
 
-        <p class="text-grey-black dark:text-white text-center mb-7">Obtenga SimpleX <a href="/downloads">desktop app</a></p>
+        <p class="text-grey-black dark:text-white text-center mb-7">Obtén SimpleX <a href="/downloads">para desktop</a></p>
         <div class="flex items-center justify-center gap-4 flex-wrap">
             <a href="https://apps.apple.com/us/app/simplex-chat/id1605771084" target="_blank"><img class="h-[40px] w-auto" src="/img/new/apple_store.svg"></a>
             <a href="https://play.google.com/store/apps/details?id=chat.simplex.app" target="_blank" title="Public iOS preview on TestFlight"><img class="h-[40px] w-auto" src="/img/new/google_play.svg"></a>
@@ -865,7 +865,7 @@ window.addEventListener('click',(e)=>{
                     <div class="flex flex-col items-center lg:items-start">
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
-                            Acerca de & Contacta con nosotros
+                            Quiénes somos & Contacto
                         </a>
                         <a href="/privacy/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
