--- a/it/invitation/index.html
+++ b/it/invitation/index.html
@@ -707,7 +707,7 @@ window.addEventListener('click',(e)=>{
             </div>
 
             <div class="flex flex-col justify-center items-center w-full max-w-[468px] h-[131px] rounded-[30px] border-[1px] border-[#A8B0B4] dark:border-white border-opacity-60 relative d-none-if-js-disabled">
-                <p class="text-xl font-medium text-grey-black dark:text-white max-w-[230px] text-center">Tocca il pulsante <span class="text-active-blue">'connetti'</span> nell'app</p>
+                <p class="text-xl font-medium text-grey-black dark:text-white max-w-[230px] text-center">Tocca il pulsante <span class="text-active-blue">"connetti"</span> nell'app</p>
 
                 <div class="absolute bg-[#0197FF] h-[44px] w-[44px] rounded-full flex items-center justify-center top-0 left-0 translate-x-[-30%] translate-y-[-30%]">
                     <p class="text-base text-white font-bold leading-[36px]">3</p>
