--- a/it/messaging/index.html
+++ b/it/messaging/index.html
@@ -1690,7 +1690,7 @@ window.addEventListener("load", function () {
 
 <section id="messengers-comparison" class="bg-primary-bg-light dark:bg-primary-bg-dark py-[90px] px-5">
     <div class="text-grey-black dark:text-white container flex flex-col">
-        <h2 class="text-[35px] leading-[43px] md:leading-[55px] lg:leading-[36px] text-center font-bold mb-12 lg:mb-[90px]">Quanto è sicura la crittografia end-to-end in diverse app di messaggistica?</h2>
+        <h2 class="text-[35px] leading-[43px] md:leading-[55px] lg:leading-[36px] text-center font-bold mb-12 lg:mb-[90px]">Confronto della sicurezza di crittografia end-to-end in diverse app di messaggistica</h2>
 
         <div class="w-full overflow-auto">
             <table class="w-full border-separate border-spacing-x-5 border-spacing-y-2">
