--- a/token/index.html
+++ b/token/index.html
@@ -46,12 +46,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simplex Chat</title>
+    <title>Community Vouchers: Your Freedom and Security</title>
     <meta name="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="onion-location" content="http://isdb4l77sjqoy2qq7ipum6x3at6hyn3jmxfx4zdhc72ufbmuq4ilwkqd.onion/token/index.html" />
     <meta property="og:url" content="https://simplex.chat/token/index.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Simplex Chat" />
+    <meta property="og:title" content="Community Vouchers: Your Freedom and Security" />
     <meta property="og:image" content="https://simplex.chat/img/share_simplex.png" />
     <meta name="twitter:card" content="summary" />
     <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.ico" />
@@ -368,89 +368,52 @@ window.addEventListener('click',(e)=>{
 </script>
 
     <section id="article" class="container mb-[75px] bg-white dark:bg-[#17203D] px-5 mt-[66px]">
-      <div class="py-6 md:p-[60px]"><h1 id="community-vouchers-your-freedom-and-security" tabindex="-1">Community Vouchers: Your Freedom and Security</h1>
-<p>Community Vouchers will be used for secure and private payments to network servers operators to make communities independent and financially sustainable.</p>
-<p>The group or channel owners would decide which network operators to use, for better reliability and censorship resistance than with other ways to publish online content.</p>
-<p>Based on blockchain zero-knowledge proofs, community vouchers are neither tokens nor cryptocurrency. They are network credits, similar to prepaid telephone cards, just on blockchain, and their price will be based purely on server costs, not on speculative factors.</p>
-<h2 id="simplex-token-launching-in-2026" tabindex="-1">SimpleX Token: Launching in 2026 🚀</h2>
+      <div class="py-6 md:p-[60px]"><h1 id="simplex-community-vouchers" tabindex="-1">SimpleX Community Vouchers</h1>
+<p>We're developing Community Vouchers as a way to enable secure payments to server operators, to make communities sustainable.</p>
+<p>Group or channel owners can select network operators for better reliability and censorship resistance than with traditional online publishing methods.</p>
+<p>These vouchers are blockchain utility tokens — to focus purely on server capacity usage, like prepaid telephone cards.</p>
+<h2 id="smpx-community-voucher-token-planned-for-2026" tabindex="-1">SMPX: Community Voucher Token planned for 2026</h2>
 <img src="/img/design_3/simplex_nft_light.png" width="30%" class="float-to-right dark:hidden">
 <img src="/img/design_3/simplex_nft_dark.png" width="30%" class="float-to-right hidden dark:block">
-<p>SimpleX utility tokens will be launched in March-July 2026 as a temporary way to pay for server capacity until Community Vouchers are developed.</p>
-<p>To reward SimpleX users we offer an <strong>additional 20% discount via free SimpleX NFT</strong> — get it here!</p>
-<p><strong>Token summary</strong></p>
+<p>SMPX token is v1 of Community Vouchers. We are aiming to launch it in 2026.</p>
+<p>Mint a free SimpleX NFT for testnet access and feedback. The NFT is non-transferable, one per wallet.</p>
+<p><strong>Preliminary token overview</strong></p>
 <ul>
-<li>full name: <strong>SimpleX Utility Token</strong>.</li>
+<li>full name: <strong>SimpleX Community Voucher</strong>.</li>
 <li>symbol: SMPX.</li>
-<li>network: Etherium mainnet, with Arbitrum One support to be added later.</li>
-<li>standard: ERC20, with contract-enforced supply limit.</li>
-<li>supply: 500,000,000 tokens nominated 0.1 operator credit, initially equal to USD 0.1, including:
+<li>network: Arbitrum One.</li>
+<li>standard: ERC20, with contract-enforced supply and other limits (TBD based on modeling and testing).</li>
+</ul>
+<p><strong>Potential utilities</strong></p>
 <ul>
-<li>30% for the initial public sale at nominal price with staged discounts up to 20%, not including an additional 20% discount available only to SimpleX NFT holders.</li>
-<li>30% for community and ecosystem projects, vested over 4 years.</li>
-<li>10% for non-profit network and protocol governance structure, also vested over 4 years.</li>
+<li>Server messaging and file capacity beyond free tier (see FAQ) for large channels and communities.</li>
+<li>Names in SimpleX Name System.</li>
 </ul>
-</li>
-</ul>
-<p><strong>Token utility</strong></p>
-<ul>
-<li>Available at launch: paying for server messaging and file storage capacity beyond free tier (see F.A.Q.) for large channels and communities.</li>
-<li>In 2026-27: priority right to purchase memorable names on SimpleX Name System.</li>
-<li>Once Community Vouchers are launched:
-<ul>
-<li>conversion to vouchers based on the better price for the token owners - either one to one, or at market price.</li>
-<li>network operators using tokens as deposits to sell vouchers will retain 30% larger revenue share than when depositing other supported cryptocurrencies.</li>
-</ul>
-</li>
-<li>Governance - all token owners would participate in decisions of a non-profit governance structure.</li>
-</ul>
-<p>More details in SimpleX Network Utiltiy Token whitepaper.</p>
-<h2 id="community-vouchers-faq" tabindex="-1">Community Vouchers F.A.Q.</h2>
+<p>We're working with blockchain and legal experts for feasibility and compliance, aiming to launch testnet in 2026. Details may change based on input. More in our upcoming whitepaper draft.</p>
+<p>To receive updates, sign up via email or connect to us via SimpleX Chat.</p>
+<h2 id="community-vouchers-faq" tabindex="-1">Community Vouchers FAQ</h2>
+<p>These are early insights into how Community Vouchers can work.</p>
 <h3 id="why-community-vouchers" tabindex="-1">Why Community Vouchers?</h3>
-<img src="/img/design_3/community_vouchers_light.jpg" width="50%" class="float-to-right dark:hidden">
-<img src="/img/design_3/community_vouchers_dark.jpg" width="50%" class="float-to-right hidden dark:block">
-<p>Very simple - somebody has to pay the bills.</p>
-<p>There are many social media and content platforms that are free to use. But they may turn out to be quite expensive:</p>
+<img src="/img/design_3/community_vouchers_light.jpg" width="30%" class="float-to-right dark:hidden">
+<img src="/img/design_3/community_vouchers_dark.jpg" width="30%" class="float-to-right hidden dark:block">
+<p>To cover server bills securely and privately.</p>
+<p>With &quot;free&quot; centralized platforms:</p>
 <ul>
-<li>they collect and sell information about your online activity — to make you pay higher prices and to influence your opinions.</li>
-<li>you don't own the content you publish on &quot;free&quot; platfomrs. It limits your right to use this content, in case the audience grows and it becomes successful.</li>
-<li>the channel you created does not belong to you as well - it can be removed in case of copyright or other content complaints, even if they are not valid.</li>
+<li>you lose security and privacy, because your data is used for advertising and sold.</li>
+<li>they de-platform inconvenient users, often based on frivolous complaints.</li>
+<li>you don't own all rights to your content.</li>
 </ul>
-<p>With centralized platforms you own nothing. The only solution to that is that groups and communities pay their own bills. The great news is that infrastructure for hosting is quite cheap, and we estimate that the cost to host a community of 5,000-10,000 users who receive messages (can be up to 100,000 members) with 5-10gb worth of files will be approximately $5-10 per month. This small amount would make community independent and network operators profitable.</p>
-<h3 id="will-there-be-free-public-groups-and-channels" tabindex="-1">Will there be free public groups and channels?</h3>
-<p>Yes, within a free tier limit.</p>
-<p>We will confirm it in 2026, but approximately 1,000 users receiving messages (can be up to 5,000-10,000 members), and 500Mb long-term storage capacity for files and media per group will be available for free.</p>
-<p>Limit on sending files with 2 days in-transit storage will remain the same – up to 1Gb per file.</p>
-<h3 id="why-not-use-existing-tokens-or-cryptocurrencies" tabindex="-1">Why not use existing tokens or cryptocurrencies?</h3>
-<p>We want to provide privacy and security of payments for the servers, which is incompatible with the necessary financial compliance in case of cryptocurrency or freely tradeable token.</p>
-<p>Community Vouchers are legally equivalent to prepaid telephone cards - community members and owners can buy them for the usual money or some cryptocurrency, and then use them to pay to network operators without identifying community owners - to protect their security and freedom of speech.</p>
-<p>Community Vouchers will only allow 2 transfers between network users, to enable donations to communities, and will not be suitable as the long term value storage, as they will expire in 6-12 months after purchase. These limitations will protect Community Vouchers from speculation and from financial regulations. Their price will be determined by the costs of providing the server capacity, and not speculatively, as it happens with cryptocurrencies.</p>
-<h3 id="how-will-vouchers-work-for-the-users" tabindex="-1">How will vouchers work for the users?</h3>
-<p>Users who want to pay for or sponsor their communities will buy Community Vouchers via the app and then the app will manage them automatically and transparently - no need to worry about managing wallets or cryptographic keys, it will be like topping up a prepaid mobile phone, including support for in-app payments.</p>
-<p>The app will automatically choose different operator to buy vouchers from, and the usage of vouchers will be unlinkable with the purchase - thanks to zero-knowledge proofs used with the vouchers.</p>
-<h3 id="how-will-simplex-network-evolve-to-support-community-vouchers" tabindex="-1">How will SimpleX network evolve to support Community Vouchers?</h3>
-<p>Currently there are two pre-configured operators in SimpleX apps, and you can use your own self-hosted servers. It allows for high degree of network decentralization and for creation of protected network segments, unlike many networks where everybody has access to all servers, protecting SimpleX network from network-wide attacks. But for users that only use pre-configured servers the decentralization is limited.</p>
-<p>The launch of Community Vouchers will create financial incentives for many other server operators to become available to the end users, under the same terms. SimpleX Chat Ltd and several non-profit entities in different jurisdictions (we already established SimpleX Chat Foundation in the US) will play the role of network regulator. They will sign the agreements with the network operators obliging them to honour the same privacy policy and quality of service as a condition of earning profit from SimpleX network traffic.</p>
-<h3 id="how-will-vouchers-work-for-the-network-operators" tabindex="-1">How will vouchers work for the network operators?</h3>
-<p>To be able to issue the vouchers, the network operator will have to:</p>
-<ul>
-<li>sign the agreement with the network regulator,</li>
-<li>make a deposit to a smart contract, using either SimpleX utility tokens (see below) or any other supported cryptocurrency. This deposit will limit the amount of voucher credits the operator can issue without providing a service.</li>
-<li>share revenue from selling the vouchers with the network regulator. This share of revenue that operator can retain will be higher for known operators, and lower for anonymous (as operator anonymity comes at a risk to users privacy and security, so users will be able to opt out of using anonymous operators), and also 30% higher if deposit is made with SimpleX Utility Tokens and lower if it is made with some other cryptocurrency.</li>
-</ul>
-<h3 id="what-are-the-conditions-of-simplex-nft-discount" tabindex="-1">What are the conditions of SimpleX NFT discount?</h3>
-<p>We offer SimpleX NFT is a way to reward and to say &quot;big thank you&quot; to our early users and communities that made SimpleX network what it is today. It would also help us better understand the demand for SimpleX utility tokens.</p>
-<p>SimpleX NFTs are completely free, you only need to pay Ehterium network fee to &quot;mint&quot; them (aka &quot;gas&quot;, usually $0.5-1 per mint). You don't have to buy utility tokens if you decide not to, but if you do — SimpleX NFT will provide you an additional 20% discount.</p>
-<p>Conditions:</p>
-<ul>
-<li><strong>discount 20%</strong> is applied to SimpleX utility token price after any other publicly available discounts.</li>
-<li>you can <strong>buy utility tokens many times</strong> - SimpleX NFT will remain in your wallet as a reminder of early days of SimpleX network.</li>
-<li>you can mint SimpleX NFT <strong>only until midnight December 31, 2025</strong> (<a href="https://www.timeanddate.com/time/zones/aoe">Anywhere on Earth time</a>).</li>
-<li>to receive this discount in 2026, you will have to buy SimpleX utility tokens via this website page to the wallet that has SimpleX NFT.</li>
-<li>you can <strong>sell or gift SimpleX NFT</strong> to any other wallet that does not have it.</li>
-<li><strong>only one SimpleX NFT per wallet</strong>, except contract owner, where we can pre-mint NFTs. It is enforced by smart-contract when minting and sending NFT, so if you already have a SimpleX NFT in the wallet you won't be able to mint or to buy another one.</li>
-<li>SimpleX NFT has an <strong>immutable conditions and image</strong> on <a href="https://ipfs.tech">IPFS</a> - we can't change them once minted.</li>
-<li>We reserve the right to stop minting NFTs or to change any conditions for future NFTs at any time.</li>
-</ul>
+<p>Paying for server capacity is cheaper than &quot;free&quot; platforms. Our estimate based on the current costs is $5-10/month for 5,000 message receivers (could be up to 50,000 members) with 5-10 GB of files/media archive. These estimates are preliminary and may change.</p>
+<h3 id="free-tier" tabindex="-1">Free Tier?</h3>
+<p>Considering up to 1,000 message receivers and 500 MB storage for free groups.</p>
+<h3 id="why-not-existing-crypto" tabindex="-1">Why Not Existing Crypto?</h3>
+<p>For privacy without heavy compliance; limits emphasize utility over speculation.</p>
+<h3 id="how-might-vouchers-work" tabindex="-1">How Might Vouchers Work?</h3>
+<p>Buy via app (like phone top-ups), with automatic management.</p>
+<p>V1 would use hashed IDs for privacy and on-chain payments. Zero-knowledge proofs and in-app payments to be added later.</p>
+<h2 id="disclaimer" tabindex="-1">Disclaimer</h2>
+<p>This design is evolving — share your feedback!</p>
+<p>This is not an investment offer. All details are subject to legal review.</p>
 </div>
     </section>
 
