--- a/zh_Hans/index.html
+++ b/zh_Hans/index.html
@@ -639,7 +639,7 @@ window.addEventListener('click',(e)=>{
                         <h2>Communities That Last</h2>
                         <p>You will support your favorite groups with future Community Vouchers.</p>
                         <p>Vouchers will pay for servers, to let your communities stay free and independent.</p>
-                        <a class="gradient-text" href="/token">Learn more and <strong>get your free NFT</strong><br>for 20% discount on SimpleX Token!</a>
+                        <a class="gradient-text" href="/token">Learn more and <strong>get your free NFT</strong><br>for early testing.</a>
                     </div>
                 </div>
             </section>
